# datasette-reconcile

./: .gitignore  .gitmodules  LICENSE.txt  README.md  dev-requirements.in  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  test.yml
datasette_reconcile/: __init__.py  reconcile.py  settings.py  utils.py
src/datasette_reconcile/: __about__.py  __init__.py  reconcile.py  settings.py  utils.py  views.py
src/datasette_reconcile/templates/: reconcile.html
tests/: __init__.py  conftest.py  fixtures.py  test_reconcile.py  test_reconcile_config.py  test_reconcile_schema.py  test_reconcile_utils.py
