[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datasette-reconcile"
dynamic = ["version"]
description = 'Adds a reconciliation API to Datasette.'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [{ name = "David Kane", email = "david@dkane.net" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["datasette", "fuzzywuzzy[speedup]"]


[project.optional-dependencies]
test = [
  "coverage[toml]>=6.5",
  "pytest",
  "pytest-asyncio",
  "httpx",
  "sqlite-utils",
  "jsonschema",
]
lint = ["black>=23.1.0", "mypy>=1.0.0", "ruff>=0.0.243"]

[project.entry-points.datasette]
reconcile = "datasette_reconcile"

[project.urls]
Documentation = "https://github.com/drkane/datasette-reconcile#readme"
Issues = "https://github.com/drkane/datasette-reconcile/issues"
Source = "https://github.com/drkane/datasette-reconcile"
CI = "https://github.com/drkane/datasette-reconcile/actions"
Changelog = "https://github.com/drkane/datasette-reconcile/releases"

[tool.hatch.version]
path = "src/datasette_reconcile/__about__.py"

[tool.hatch.envs.default]
features = ["test", "lint"]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = ["- coverage combine", "coverage report"]
cov = ["test-cov", "cov-report"]
cov-fail = ["test-cov", "- coverage combine", "coverage report --fail-under=95"]
cov-html = [
  "test-cov",
  "- coverage combine",
  "coverage report",
  "coverage html",
  "python -m http.server -d htmlcov",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
features = ["lint"]

[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/datasette_reconcile tests}"
style = ["ruff {args:.}", "black --check --diff {args:.}"]
fmt = ["black {args:.}", "ruff --fix {args:.}", "style"]
all = ["style", "typing"]

[tool.black]
target-version = ["py37"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py37"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105",
  "S106",
  "S107",
  # Ignore complexity
  "C901",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["datasette_reconcile"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["datasette_reconcile", "tests"]
branch = true
parallel = true
omit = ["src/datasette_reconcile/__about__.py"]

[tool.coverage.paths]
datasette_reconcile = [
  "src/datasette_reconcile",
  "*/datasette-reconcile/src/datasette_reconcile",
]
tests = ["tests", "*/datasette-reconcile/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
